# angreal

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .spelling_wordlist.txt  .travis.yml  .yamllint-config.yml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  MANIFEST.in  README.md  README.rst  dodo.py  enviroment.yml  mkdocs.yml  plissken.toml  pyproject.toml  requirements.txt  setup.py
.angreal/: angreal.toml  task_api_docs.py  task_dev.py  task_docs.py  task_echo.py  task_run_tests.py  task_setup.py  task_smoke.py  task_test.py  task_test_mcp.py  task_tests.py
.angreal/log/: __init__.py
.claude-plugin/: marketplace.json
.flox/: env.json
.flox/env/: manifest.toml
.github/workflows/: ci.yaml  docs.yaml  release.yaml  test.yaml  tests.yaml
.metis/: code-index-hashes.json  code-index-symbols.json  code-index.md  config.toml  metis.db  vision.md
.metis/backlog/bugs/: ANG-T-0021.md  ANG-T-0022.md  ANG-T-0023.md
.metis/backlog/features/: ANG-T-0011.md
.metis/backlog/tech-debt/: ANG-T-0012.md  ANG-T-0018.md  ANG-T-0020.md
.metis/initiatives/ANG-I-0009/: initiative.md
.metis/strategies/mcp-server-integration/: strategy.md
.metis/strategies/multi-crate-workspace-restructure/: strategy.md
angreal/: __init__.py  app.py  base_init.py  cli.py  compat.py  config.py  cutter.py  git.py  global.cfg  log.py  main.py  parser.py  replay.py  task_loader.py  utils.py
angreal/cli/: __init__.py  base_init.py  list.py  list_cmd.py
angreal/commands/: __init__.py  build.py  config.py  init.py  register.py  update.py
angreal/decorators/: __init__.py
angreal/integrations/: __init__.py  conda.py  docker.py  doit.py  file_system.py  gh.py  git.py  git_lab.py  githost.py  gitlab.py  gitremote.py  gl.py  gpu.py  virtual_env.py
angreal/integrations/cookiecutter/: __init__.py  find.py  generate.py  prompt.py
angreal/integrations/doit/: __init__.py
angreal/integrations/githost/: __init__.py  gitlab.py
angreal/integrations/gitlab/: __init__.py
angreal/task_helpers/: __init__.py
angreal/templates/: app.py  business_minutes.rst  dodo.py  enviroment.yml  gitattributes  gitignore  project_description.rst  project_index.rst  project_results.rst  project_scope.rst  setup.py  sphinx_conf.py  sphinx_makefile
angreal/tests/: angreal_dunder.py  build_gitlab.sh  test.cfg  test_angrealConfig.py  test_conda.py  test_file_system.py  test_git.py
crates/angreal/: Cargo.toml  pyproject.toml
crates/angreal-mcp/: Cargo.toml  README.md
crates/angreal-mcp/src/: main.rs  server.rs
crates/angreal-mcp/src/tools/: all_tools.rs  angreal_command_tool.rs  dynamic_tools.rs  mod.rs  placeholder_tool.rs  test_tool.rs
crates/angreal/src/: error_formatter.rs  init.rs  lib.rs  logger.rs  macros.rs  mcp.rs  py_logger.rs  task.rs  utils.rs
docker/: Testing.dockerfile
docs/: Makefile  angreal.rst  conf.py  config.toml  hugo.toml  index.rst  modules.rst
docs/_draft/: documentation-audit-2024.md
docs/_draft/how_to/: add_command_line_arguments.rst.md  include-jinja-templates.rst.md  use-docker-integration.rst.md  use-git-integration.rst.md  work_with_virtual_environments.rst.md
docs/_draft/integrations/: git.md  venv.md
docs/api/: _nav.yml  angreal.md
docs/api/angreal/: py_logger.md  task.md  utils.md
docs/api/rust/: angreal.md
docs/content/: _index.md
docs/content/api_reference/: _index.md  architecture.md  py_angreal.md  rust_python_interface.md
docs/content/available_templates/: _index.md
docs/content/code_of_conduct/: _index.md
docs/content/contributing/: _index.md  code_of_conduct.md  documentation_style_guide.md
docs/content/discussions/: _index.md  angreal_init_behaviour.md  partial_solutions.rst.md
docs/content/explanation/: _index.md  aliasing_system.md  index.md  rust_python_interface.md  why_angreal.md  (+1 more)
docs/contributing/: index.md
docs/explanation/: angreal_init_behaviour.md  task_discovery.md
docs/how-to-guides/: create-a-task.md  create-task-group.md  create-templates.md  include-jinja-templates.md  render-template-in-place.md  use-validation-rules.md
docs/source/: angreal.cli.rst  angreal.cutter.rst  angreal.decorators.rst  angreal.rst  angreal.task_helpers.rst  angreal.utils.rst  cache.rst  code_of_conduct.rst  conf.py  contributing.rst  discussion.rst  example_project.rst  how-to-guides.rst  index.rst  installation.rst  intro.rst  quickstart.rst  reference.rst  tutorials.rst  use_case.rst
docs/tutorials/: index.md  your_first_angreal.md
example/: cookiecutter.json
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json  pre-compact.sh  session-start.sh
py_tests/: test_angreal.py  test_angreal_logger.py  test_argv_handling.py  test_entrypoint_registration.py  test_exit_codes.py  test_functional.py  test_get_context.py  test_git_rust_integration.py
py_tests/integrations/: test_docker.py  test_docker_compose.py  test_flox.py  test_flox_extended.py  test_git.py  test_venv.py  test_venv_extended.py
python/angreal/: __init__.py
requirements/: dev.txt  requirements.txt
skill/: AGENTS.md
skill/.claude-plugin/: plugin.json
src/: builder.rs  cli.rs  git.rs  init.rs  lib.rs  logger.rs  macros.rs  py_logger.rs  task.rs  utils.rs
src/builder/: command_tree.rs  mod.rs
src/completion/: mod.rs  templates.rs  zsh.rs
src/git/: mod.rs
src/integrations/: git.rs  mod.rs
src/python_bindings/: decorators.rs  mod.rs  utils.rs  venv.rs
src/validation/: length.rs  min.rs  mod.rs
tests/: __init__.py  conftest.py  integration_tests.rs  test_cli.py  test_cutter.py  test_initialize_cutter.py  test_task_helpers.py  test_task_loader.py  test_utils.py
tests/cli/: test_base_init.py  test_list.py
tests/common/: mod.rs
tests/functional/: functional_test_github.py  functional_test_gitlab.py  functional_test_pip_template.py  test_github.py
tests/functional_tests/: functional_test_gitlab.py
tests/integration/: init.rs
tests/integrations/: test_virtualenv.py
tests/test_cli/: test_cli.py
tests/unit/: test_compat.py  test_cutter.py  test_imports.py  test_replay.py  test_utils.py
(+582 files in other folders)
