[package]
name = "angreal"
version = "2.0.6"
edition = "2021"
description = "Angreal is a tool for templating projects and associated processes to provide a consistent developer experience across multiple projects."
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/angreal/angreal"
repository = "https://github.com/angreal/angreal"
documentation = "https://angreal.github.io/angreal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "angreal"
crate-type = ["cdylib","rlib"]
doctest = false

[dependencies]
pyo3 = { version = "^0.18", features = ["auto-initialize"], extension-module = ["pyo3/extension-module"]}
docker-pyo3 = { version = "0.1.4" } 
clap = { version = "3" }
version = {version = "3.0.0"}
log = { version = "0.4" }
glob = { version = "0.3.0" }
once_cell = {version = "1.3.1"}
git2 = {version = "0.16"}
git-url-parse = { version = "0.4.4" }
home = { version = "0.5.4" }
tera = { version = "1.17.1" , features = ["builtins"]}
walkdir = {version = "2.3.2" }
toml = {version = "0.6", features=["preserve_order"] }
text_io = {version = "0.1.12" }
log4rs = {version ="1.2.0"}
openssl = { version = "0.10", features = ["vendored"] }


[dev-dependencies]
rand = { version="0.8.5" }

[package.metadata.maturin]
python-source = "python"

