[package]
description = "Angreal is a tool for templating projects and associated processes to provide a consistent developer experience across multiple projects."
edition = "2021"
homepage = "https://github.com/angreal/angreal"
license = "GPL-3.0-only"
name = "angreal"
readme = "README.md"
repository = "https://github.com/angreal/angreal"
version = "2.0.7"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib","rlib"]
doctest = false
name = "angreal"

[dependencies]
clap = { version = "3" }
docker-pyo3 = { version = "0.1.4" }
git-url-parse = { version = "0.4.4" }
git2 = { version = "0.16"}
git2_credentials = { version = "0.11.0"}
glob = { version = "0.3.0" }
home = { version = "0.5.4" }
log = { version = "0.4" }
log4rs = { version ="1.2.0"}
once_cell = { version = "1.3.1"}
openssl = { version = "0.10", features = ["vendored"] }
pyo3 = { version = "^0.18", features = ["auto-initialize"], extension-module = ["pyo3/extension-module"]}
reqwest = { version = "0.11.18", features = ["blocking","json"] }
serde_json = { version = "1" }
tera = { version = "1.17.1" , features = ["builtins"]}
text_io = { version = "0.1.12" }
toml = { version = "0.6", features=["preserve_order"] }
version = { version = "3.0.0" }
version-compare = { version = "0.1.1" }
walkdir = { version = "2.3.2" }


[dev-dependencies]
rand = { version="0.8.5" }
same-file = { version = "1.0.6" }
[package.metadata.maturin]
python-source = "python"
