[workspace]
resolver = "2"
members = [
    "crates/angreal",
    "crates/angreal-mcp",
]
default-members = ["crates/angreal"]

[workspace.package]
version = "2.4.2"
edition = "2021"
license = "GPL-3.0-only"
homepage = "https://github.com/angreal/angreal"
repository = "https://github.com/angreal/angreal"

[workspace.dependencies]
# Core dependencies that could be shared across crates
anyhow = "1.0.72"
clap = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
toml = { version = "0.6", features = ["preserve_order"] }
pyo3 = { version = "^0.18", features = ["auto-initialize"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"

# Build profile optimizations
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
