[build-system]
requires = ["maturin>=0.14.10,<0.15"]
build-backend = "maturin"

[project]
name = "angreal"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[project.scripts]
angreal = "angreal:main"