[package]
name = "angreal_mcp"
version = "2.5.1"
edition = "2021"
description = "MCP server for angreal projects"
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/angreal/angreal"
homepage = "https://github.com/angreal/angreal"

[[bin]]
name = "angreal-mcp"
path = "src/main.rs"

[dependencies]
angreal = { path = "../angreal", version = "2.5.0" }
rust-mcp-sdk = { version = "0.5.0", default-features = false, features = [
    "server",
    "macros",
    "2025_06_18",
] }
schemars = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
pyo3 = { version = "0.26", features = ["auto-initialize"] }
