[package]
name = "angreal_mcp"
version = "2.7.0"
edition = "2021"
description = "MCP server for angreal projects"
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/angreal/angreal"
homepage = "https://github.com/angreal/angreal"

[[bin]]
name = "angreal-mcp"
path = "src/main.rs"

[dependencies]
angreal = { path = "../angreal", version = "2.7.0" }
rust-mcp-sdk = { version = "0.7.4", git = "https://github.com/rust-mcp-stack/rust-mcp-sdk", rev = "54d0237f04befce3ce21c9d8ffe19cb567c1ffad", default-features = false, features = [
    "server",
    "macros",
    "stdio",
] }
# Pin hyper-util to compatible version to avoid axum-server build errors
hyper-util = "=0.1.17"
schemars = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
pyo3 = { version = "0.26", features = ["auto-initialize"] }
